Welcome page/login
Page drafting

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Team Builder</title>
   </head>
   <body>
-    <h1>Testing!</h1>
+    <header>
+      <div class="title-button">
+        <button class="menu-button">Menu</button>
+      </div>
+      <div class="title-main">
+        <p>Team Builder</p>
+      </div>
+      <div class="google-login">placeholder</div>
+    </header>
+
+    <main>
+      <div class="welcome-container">Welcome to Team Builder</div>
+    </main>
   </body>
 </html>
