--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
+    <script src="scripts/index.js" defer></script>
     <title>Team Builder</title>
   </head>
   <body>
     <header>
       <div class="title-button">
-        <button class="menu-button">Menu</button>
+        <button class="menu-button" id="menu-button">Menu</button>
       </div>
       <div class="title-main">
         <p>Team Builder</p>
@@ -19,7 +20,26 @@
     </header>
 
     <main>
-      <div class="welcome-container">Welcome to Team Builder</div>
+      <div class="welcome-container">
+        <div class="welcome-info">
+          <p class="welcome-title">Welcome to Team Builder</p>
+          <p class="welcome-text">
+            An application aimed at centralising all your team building needs!
+          </p>
+        </div>
+        <div class="welcome-img">IMAGE PLACEHOLDER</div>
+      </div>
+
+      <div class="login-reg-container">
+        <div class="login-container">
+          <p class="sub-title">Login</p>
+          <p>INSERT FORM</p>
+        </div>
+        <div class="register-container">
+          <p class="sub-title">Register</p>
+          <p>INSERT FORM</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
