--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,63 @@
       <div class="login-reg-container">
         <div class="login-container">
           <p class="sub-title">Login</p>
-          <p>INSERT FORM</p>
+          <form action="#" method="get" id="login-form">
+            <label for="login-username">Username:</label>
+            <input
+              id="login-username"
+              type="text"
+              placeholder="Enter Username"
+              name="login-username"
+              required
+            />
+
+            <label for="login-password">Password:</label>
+            <input
+              id="login-password"
+              type="password"
+              placeholder="Enter Password"
+              name="login-password"
+              minlength="8"
+              required
+            />
+
+            <button type="submit">Submit</button>
+          </form>
         </div>
         <div class="register-container">
           <p class="sub-title">Register</p>
-          <p>INSERT FORM</p>
+          <form action="#" method="post" id="reg-form">
+            <label for="reg-username">Username:</label>
+            <input
+              id="reg-username"
+              type="text"
+              placeholder="Enter Username"
+              name="reg-username"
+              required
+            />
+
+            <label for="reg-password">Password:</label>
+            <input
+              id="reg-password"
+              type="password"
+              placeholder="Enter Password"
+              name="reg-password"
+              minlength="8"
+              required
+            />
+
+            <label for="confirm-reg-password">Confirm Password:</label>
+            <input
+              id="confirm-reg-password"
+              type="password"
+              placeholder="Confirm Password"
+              name="reg-confirm-password"
+              minlength="8"
+              required
+            />
+
+            <button type="submit">Submit</button>
+          </form>
         </div>
       </div>
     </main>
